Bug 312183 - amarok starts at beginning of playlist if you previously stopped during a track
Summary: amarok starts at beginning of playlist if you previously stopped during a track
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playback (other bugs)
Version First Reported In: 2.7-git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.8
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-25 10:09 UTC by robert marshall
Modified: 2013-08-02 12:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert marshall 2012-12-25 10:09:40 UTC
(I don't think this is a repeat of 312062) If you press stop during the playing of a track then the next time you press start amarok starts playing from the start of the playlist it appears to lose the playlist position.

Reproducible: Always

Steps to Reproduce:
1. Start playing a track from the middle of a playlist
2. After around 20 secs press stop button
3. Press start button - amarok will start playing from the first track in the playlist
Actual Results:  
The first track in the playlist is played

Expected Results:  
I'd expect it to play the current track (the one that was playing when stop was invoked). I think this is a regression,I don't remember it happening in 2.6.0

vlc backend (0.6.0)
Comment 1 Ralf Engels 2013-01-05 13:35:33 UTC
I see the same problem.
Argh. We should have noticed that!
Comment 2 Matěj Laitl 2013-01-05 14:06:48 UTC
Could have been caused by my changes to Playlist::Action. Ralf, please see http://commits.kde.org/amarok/57e5bf46 and Playlist::Actions::slotPlayingStopped(). Perhaps Playlist::Actions::m_nextTrackCandidate should be set before slotPlayingStopped() is called in this case. Ralf, feel free to fix it, I won't have time for some days.

Related is also previous commit http://commits.kde.org/amarok/e1d2ea6c and bug 299890, bug 268892, bug 277197, bug 302652, bug 303580 and bug 302240. Any change should be tested not to break already resolved bugs. (some bugs in the list may be still open).
Comment 3 Ralf Engels 2013-01-05 21:08:13 UTC
Matej,
I think you are right about the problem.
I am looking if I can fix it.

Also we definitely need to have auto tests for the playlist stuff.
Comment 4 Ralf Engels 2013-01-06 10:55:07 UTC
Git commit 8674fad6ac9f9eb413c52e27483c3606c9705715 by Ralf Engels.
Committed on 06/01/2013 at 01:59.
Pushed by rengels into branch 'master'.

Fix amarok starts at beginning of playlist if you previously stopped during a track
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +3    -1    src/EngineController.cpp
M  +12   -4    src/playlist/PlaylistActions.cpp
M  +1    -1    src/playlist/PlaylistActions.h

http://commits.kde.org/amarok/8674fad6ac9f9eb413c52e27483c3606c9705715
Comment 5 Stefan Werner 2013-01-26 11:29:56 UTC
This Bug is not completely fixed in final 2.7. 
It now works as expected for local files, but still happens if one stops during a stream.
Comment 6 Myriam Schweingruber 2013-01-26 12:01:34 UTC
(In reply to comment #5)
> This Bug is not completely fixed in final 2.7. 
> It now works as expected for local files, but still happens if one stops
> during a stream.

"Stop" or "Pause"? Just to clarify...
Comment 7 Stefan Werner 2013-01-26 13:24:48 UTC
Stop, Pause works as expected 

PS: thanks for the fast response!
Comment 8 Myriam Schweingruber 2013-01-26 14:14:07 UTC
Thank you for the feedback. I think this is one of the reasons we don't expose "Stop" in the main toolbar...
Comment 9 Mark Kretschmann 2013-08-02 12:14:54 UTC
Works as expected with Amarok 2.8.