Fix amarok starts at beginning of playlist if you previously stopped during a track

BUG: 312183
FIXED-IN: 2.7